--- a/common_bokang/src/main/res/layout/trtc_main_activity2.xml
+++ b/common_bokang/src/main/res/layout/trtc_main_activity2.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.tencent.liteav.demo.trtc.TRTCVideoViewLayout
+        <com.yijia.common_yijia.main.message.trtc2.TRTCVideoViewLayout
             android:id="@+id/ll_mainview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
