--- a/tuikit/src/main/res/layout/chat_panel.xml
+++ b/tuikit/src/main/res/layout/chat_panel.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <com.tencent.qcloud.uikit.business.chat.view.ChatBottomInputGroup
+    <com.tencent.qcloud.uikit.business.chat.view.ChatBottomInputGroupCust
         android:id="@+id/chat_bottom_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
