--- a/tuikit4.2.52/src/main/res/drawable/icon_circle_bg.xml
+++ b/tuikit4.2.52/src/main/res/drawable/icon_circle_bg.xml
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="utf-8"?>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
 
-    <item android:drawable="@drawable/bottom_action_voice_pressed" android:state_pressed="true" />
-    <item android:drawable="@drawable/bottom_action_voice_normal" android:state_pressed="false" />
+    <solid
+        android:color="#ffffff"/>
 
-</selector>
+    <size
+        android:width="43dp"
+        android:height="43dp"/>
+</shape>
