--- a/tuikit4.2.52/src/main/res/drawable/msg_editor_border.xml
+++ b/tuikit4.2.52/src/main/res/drawable/msg_editor_border.xml
@@ -3,6 +3,6 @@
     <solid android:color="#fff" />
     <stroke
         android:width="1px"
-        android:color="#bfbfbf" />
-    <corners android:radius="3dp" />
+        android:color="#f0f0f0" />
+    <corners android:radius="90dp" />
 </shape>
