--- a/tuikit4.2.52/src/main/res/layout/chat_bottom_group_cust.xml
+++ b/tuikit4.2.52/src/main/res/layout/chat_bottom_group_cust.xml
@@ -1,125 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="#c2c2c2" />
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/chat_main_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="55dp"
+        android:gravity="bottom"
         android:orientation="horizontal"
-        android:padding="5dp">
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_gravity="bottom"
-            android:padding="5dp">
-
-            <ImageView
-                android:id="@+id/voice_input_switch"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/action_audio_selector" />
-        </RelativeLayout>
+        android:paddingBottom="10dp"
+        android:paddingLeft="19dp"
+        android:background="@drawable/ic_im_input_bg"
+        android:paddingRight="16sp">
 
 
         <EditText
             android:id="@+id/chat_message_input"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
             android:layout_weight="1"
+            android:maxLines="2"
+            android:padding="5dp"
+            android:paddingLeft="8dp"
             android:background="@drawable/msg_editor_border"
             android:maxHeight="120dp"
-            android:minHeight="35dp"
-            android:padding="5dp" />
+            android:minHeight="30dp"/>
+
+
+        <ImageView
+            android:id="@+id/voice_input_switch"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_marginLeft="15dp"
+            android:scaleType="fitXY"
+            android:background="@drawable/icon_circle_bg"
+            android:padding="2dp"
+            android:src="@drawable/ic_im_voice"/>
 
         <Button
             android:id="@+id/chat_voice_input"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:background="@drawable/voice_btn_selector"
             android:text="按住说话"
             android:textColor="@color/text_color_gray"
-            android:visibility="gone" />
+            android:visibility="gone"/>
+
+        <ImageView
+            android:id="@+id/face_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="18dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_im_imoj"/>
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_gravity="bottom"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/face_btn"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/action_face_selector" />
+        <ImageView
+            android:id="@+id/more_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="18dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_im_more"/>
 
 
-            <RelativeLayout
-                android:layout_width="45dp"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/more_btn"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_centerInParent="true"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/action_more_selector" />
-
-
-                <Button
-                    android:id="@+id/send_btn"
-                    android:layout_width="40dp"
-                    android:layout_height="30dp"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/message_send_border"
-                    android:text="@string/send"
-                    android:textColor="#fff"
-                    android:textSize="13sp"
-                    android:visibility="gone" />
-
-            </RelativeLayout>
-
-
-        </LinearLayout>
-
+        <ImageView
+            android:id="@+id/send_btn"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_im_send"
+            android:gravity="center"
+            android:layout_marginLeft="13dp"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="#c2c2c2" />
+        android:background="#c2c2c2"/>
 
     <RelativeLayout
-        android:id="@+id/more_groups"
+        android:id="@+id/face_groups"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:visibility="gone"/>
+
+    <RelativeLayout
+        android:id="@+id/action_groups"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
 </LinearLayout>
