--- a/common_bokang/src/main/res/layout/item_family.xml
+++ b/common_bokang/src/main/res/layout/item_family.xml
@@ -12,11 +12,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
+        android:ellipsize="end"
         android:textColor="@color/app_text_dark"
         android:textSize="16sp"
+        android:singleLine="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="30dp"/>
 
     <CheckBox
         android:id="@+id/item_check"
