--- a/common_bokang/src/main/res/layout/popup_listview.xml
+++ b/common_bokang/src/main/res/layout/popup_listview.xml
@@ -7,7 +7,7 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:divider="@color/main_line_default_f5"
         android:dividerHeight="1dp"/>
