--- a/common_bokang/src/main/res/layout/include_edit_top.xml
+++ b/common_bokang/src/main/res/layout/include_edit_top.xml
@@ -39,9 +39,10 @@
         android:layout_marginBottom="11dp"
         android:background="@drawable/rectangle_main_orange"
         android:paddingStart="15dp"
-        android:paddingTop="6dp"
+        android:paddingTop="5dp"
+        android:layout_marginTop="3dp"
         android:paddingEnd="15dp"
-        android:paddingBottom="6dp"
+        android:paddingBottom="5dp"
         android:text="发送"
         android:textColor="@color/white"
         android:textSize="15sp" />
