--- a/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
+++ b/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
@@ -274,13 +274,12 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="15dp">
 
-                    <com.joanzapata.iconify.widget.IconTextView
-                        android:layout_width="37dp"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="{icon-yedit}"
-                        android:textColor="@color/app_text_orange"
-                        android:textSize="22sp" />
+                    <ImageView
+                        android:layout_width="18dp"
+                        android:layout_height="22dp"
+                        android:src="@mipmap/icon_qysg"
+                        android:scaleType="fitXY"
+                        android:layout_gravity="center_vertical"/>
 
                     <android.support.v7.widget.AppCompatTextView
                         android:layout_width="wrap_content"
