--- a/common_bokang/src/main/res/layout/include_item_index_top_letter.xml
+++ b/common_bokang/src/main/res/layout/include_item_index_top_letter.xml
@@ -8,21 +8,24 @@
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="@color/main_line_default_f5"/>
-    <com.example.latte.ui.widget.RobotImageView
+    <ImageView
         android:id="@+id/civ_img"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="13dp"
-        android:background="@mipmap/icon_index_time" />
+        android:layout_marginTop="12dp"
+        android:scaleType="fitXY" />
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="10dp"
         android:textColor="@color/main_text_blue_57"
+        android:layout_toRightOf="@id/civ_img"
+        android:layout_alignTop="@id/civ_img"
+        android:singleLine="true"
+        android:maxWidth="200dp"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:text="爸爸" />
@@ -31,9 +34,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="16dp"
         android:layout_toRightOf="@+id/tv_name"
-        android:textColor="@color/main_text_gary_99"
+        android:layout_alignBaseline="@id/tv_name"
+        android:textColor="@color/main_text_a6"
         android:textSize="15sp"
         tools:text="10分钟前" />
 
@@ -43,22 +46,22 @@
         android:textStyle="bold"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_name"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="15dp"
+        android:layout_alignLeft="@id/tv_name"
         android:textColor="@color/app_text_dark"
-        android:textSize="18sp"
+        android:textSize="20sp"
         tools:text="规范化风格化工具钢结核杆菌爸格" />
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_title"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="32dp"
+        android:layout_below="@id/tv_title"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="15dp"
+        android:layout_alignLeft="@id/tv_name"
         android:textColor="@color/app_text_dark"
-        android:textSize="20sp"
+        android:textSize="18sp"
         tools:text="规范化风格化工具钢结核杆菌宏观经济哈哈规范化风格化工具钢结核杆菌宏观经济哈哈规范化风格化工具钢结核杆菌宏观经济哈哈规范化风格化工具钢结核杆菌宏观经济哈哈规范化风格化工具钢结核杆菌宏观经济哈哈规范化风格化工具钢结核杆菌宏观经济哈哈" />
 
 
