--- a/common_bokang/src/main/res/layout/item_index_images.xml
+++ b/common_bokang/src/main/res/layout/item_index_images.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:descendantFocusability="blocksDescendants"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:orientation="vertical">
+                                              xmlns:tools="http://schemas.android.com/tools"
+                                              android:layout_width="match_parent"
+                                              xmlns:app="http://schemas.android.com/apk/res-auto"
+                                              android:descendantFocusability="blocksDescendants"
+                                              android:layout_height="wrap_content"
+                                              android:background="@color/white"
+                                              android:orientation="vertical">
 
     <include layout="@layout/include_item_index_top" />
 
@@ -16,6 +17,7 @@
         android:layout_marginStart="61dp"
         android:layout_marginTop="11dp"
         android:layout_marginEnd="15dp"
+        app:ngv_singleImageSize="1000dp"
         />
 
     <include layout="@layout/include_item_index_commet_withdelete" />
