--- a/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
+++ b/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
@@ -86,6 +86,7 @@
                         android:drawableRight="@mipmap/main_arrow_down"
                         android:drawablePadding="4dp"
                         android:text="孟宪良"
+                        android:singleLine="true"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold"
