--- a/common_bokang/src/main/res/layout/delegate_mine.xml
+++ b/common_bokang/src/main/res/layout/delegate_mine.xml
@@ -41,6 +41,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:textStyle="bold"
+                    android:singleLine="true"
                     android:layout_marginTop="32dp"
                     android:textColor="@color/light_black"
                     android:textSize="22sp" />
