--- a/common_bokang/src/main/res/layout/delegate_personaldata.xml
+++ b/common_bokang/src/main/res/layout/delegate_personaldata.xml
@@ -31,6 +31,7 @@
             android:layout_width="36dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="40dp"
+            android:scaleType="fitXY"
             android:layout_height="36dp" />
     </LinearLayout>
 
@@ -49,6 +50,7 @@
             android:layout_width="0dp"
             android:layout_marginLeft="14dp"
             android:textSize="16sp"
+            android:minWidth="50dp"
             android:layout_gravity="center_vertical"
             android:text="昵称"
             android:layout_height="wrap_content" />
@@ -59,6 +61,7 @@
             android:text="xxxxx"
             android:layout_gravity="center_vertical"
             android:textSize="16sp"
+            android:singleLine="true"
             android:layout_marginRight="40dp"
             android:textColor="#CECECE"
             />
