--- a/common_bokang/src/main/res/layout/item_family.xml
+++ b/common_bokang/src/main/res/layout/item_family.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
@@ -9,28 +9,25 @@
 
     <TextView
         android:id="@+id/item_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:ellipsize="end"
         android:textColor="@color/app_text_dark"
         android:textSize="16sp"
         android:singleLine="true"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="30dp"/>
+        android:layout_toLeftOf="@+id/item_check"
+        android:layout_marginEnd="5dp"/>
 
     <CheckBox
         android:id="@+id/item_check"
         android:layout_width="13dp"
         android:layout_height="13dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginEnd="15dp"
         android:button="@drawable/family_item_checkbox"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:enabled="false"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:enabled="false"/>
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
