--- a/common_bokang/src/main/res/layout/item_index_comment.xml
+++ b/common_bokang/src/main/res/layout/item_index_comment.xml
@@ -14,6 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/main_text_blue_57"
+        android:drawableStart="@mipmap/icon_common"
+        android:drawablePadding="10dp"
         android:textSize="16sp"
         tools:text="张三:" />
 
