--- a/common_bokang/src/main/res/layout/delegate_personaldata.xml
+++ b/common_bokang/src/main/res/layout/delegate_personaldata.xml
@@ -35,7 +35,7 @@
             android:layout_height="36dp" />
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:background="#ffffff"
         android:id="@+id/user_name_layout"
         android:layout_marginRight="15dp"
@@ -43,21 +43,24 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_below="@+id/head_portrait_layout"
-        android:orientation="horizontal"
-        android:layout_height="51dp">
+        android:layout_height="51dp"
+        android:gravity="center_vertical">
         <TextView
             android:layout_weight="1"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_marginLeft="14dp"
             android:textSize="16sp"
             android:minWidth="50dp"
             android:layout_gravity="center_vertical"
             android:text="昵称"
+            android:id="@+id/nickname_key"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/user_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_toRightOf="@id/nickname_key"
             android:text="xxxxx"
             android:layout_gravity="center_vertical"
             android:textSize="16sp"
@@ -65,6 +68,6 @@
             android:layout_marginRight="40dp"
             android:textColor="#CECECE"
             />
-    </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
