--- a/common_bokang/src/main/res/layout/item_index_comment.xml
+++ b/common_bokang/src/main/res/layout/item_index_comment.xml
@@ -17,7 +17,7 @@
         android:drawableStart="@mipmap/icon_common"
         android:drawablePadding="10dp"
         android:textSize="16sp"
-        tools:text="张三:" />
+        tools:text="" />
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_comment"
