--- a/common_bokang/src/main/res/layout/item_robot_main_list.xml
+++ b/common_bokang/src/main/res/layout/item_robot_main_list.xml
@@ -28,13 +28,16 @@
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:textColor="@color/main_text_black_46"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@id/iv_img"
+        app:layout_constraintEnd_toStartOf="@+id/tv_robot_status"
         app:layout_constraintTop_toTopOf="@id/iv_img"
+        android:layout_marginEnd="5dp"
+        android:singleLine="true"
         tools:text="妈妈"/>
 
 
