--- a/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
+++ b/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
@@ -23,8 +23,13 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="222dp"
-                android:background="@mipmap/background_index_top"
                 app:layout_collapseMode="parallax">
+                <ImageView
+                    android:id="@+id/main_cover"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/background_index_top"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
